File download display grid with proper CSS

--- a/styles/pages/catalog.less
+++ b/styles/pages/catalog.less
@@ -151,6 +151,30 @@
 		#permissionContents {
 			padding-top: 1em;
 		}
+		
+		.downloadTableRow {
+			display: table-row;
+		}
+		
+		.downloadTableChapterCell {
+			display: table-cell;
+			vertical-align: middle;
+			text-align: left;
+			padding: 5px;
+		}
+
+		.downloadTableFileCell {
+			display: table-cell;
+			vertical-align: middle;
+			padding: 10px;
+		}
+		
+		.downloadTablePublicationFormatCell {
+			display: table-cell;
+			vertical-align: middle;
+			padding: 5px;
+		}
+
 	}
 	
 	#bookAccordion {
