Minor tweaks in download files display

--- a/styles/pages/catalog.less
+++ b/styles/pages/catalog.less
@@ -151,28 +151,39 @@
 		#permissionContents {
 			padding-top: 1em;
 		}
-		
-		.downloadTableRow {
-			display: table-row;
+
+		.downloadSection {
+			display: table;
 		}
 		
-		.downloadTableChapterCell {
+		.download {
+			display: table-row;
+		}
+
+		.downloadChapterNames {
 			display: table-cell;
 			vertical-align: middle;
 			text-align: left;
 			padding: 5px;
 		}
 
-		.downloadTableFileCell {
+		.downloadFileNames {
 			display: table-cell;
 			vertical-align: middle;
-			padding: 10px;
+			text-align: left;
+			padding: 5px 5px 5px 10px;
+		}
+
+		.downloadFiles {
+			display: table-cell;
+			vertical-align: middle;
+			padding: 5px 10px;
 		}
 		
-		.downloadTablePublicationFormatCell {
+		.downloadPublicationFormat {
 			display: table-cell;
 			vertical-align: middle;
-			padding: 5px;
+			padding: 15px 5px 5px 5px;
 		}
 
 	}
